# Staff_portal

./: .env  .gitignore  app.log  # File to store logs  app.log  # File to store logs  app.py  config.py  database.sql  extensions.py  forms.py  models.py  mysql_storage.py  pyproject.toml  render.yaml  requirements.in  requirements.txt  routes.py  run.py  test_db_connection.py  test_mydb_connection.py  test_mysql_connection.py  utils.py
migrations/: alembic.ini  env.py
migrations/versions/: 9add89615840_.py  ccbdb3e9c6a9_add_documentuploads_table.py
ssl/: cert.csr  cert.pem  key.pem
static/css/: styles.css
static/frontend/public/: index.html
static/frontend/src/: index.css
static/frontend/src/components/: CashAdvanceForm.js  Dashboard.js  Notifications.js  RequestTable.js  Sidebar.js
static/js/: script.js
templates/: dashboard.html
